--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# tabularml\n",
+    "# Tabular ML\n",
     "\n",
-    "> ML on tabular data"
+    "> Demonstration of Data Science pipeline on typical tabular datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This repository shows a data science pipeline applied to typical datasets such as the [\"used cars\" dataset](https://data.world/data-society/used-cars-data)"
    ]
   },
   {
@@ -30,17 +37,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
+    "## Analysis\n",
+    "\n",
+    "In order to see the analysis currently performed on the \"used cars\" dataset, first download the data from https://data.world/data-society/used-cars-data, and then run the notebook in `nbs/analysis.ipynb`. The result of this analysis can be seen in html here:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data-set\n",
+    "## Data-set\n",
     "\n",
-    "The data-set used in this tutorial can be downloaded from https://data.world/data-society/used-cars-data"
+    "The data-set used used in the   can be downloaded from https://data.world/data-society/used-cars-data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
