Adding link to index

--- a/nbs/analysis.ipynb
+++ b/nbs/analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis based on Regression Trees\n",
+    "# Analysis\n",
     "\n",
-    "> Using Decision Trees and Random Forests"
+    "> Analysis based on Decision Trees, Random Forests, and Neural Networks."
    ]
   },
   {
