--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -39,16 +39,7 @@
    "source": [
     "## Analysis\n",
     "\n",
-    "In order to see the analysis currently performed on the \"used cars\" dataset, first download the data from https://data.world/data-society/used-cars-data, and then run the notebook in `nbs/analysis.ipynb`. The result of this analysis can be seen in html here:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data-set\n",
-    "\n",
-    "The data-set used used in the   can be downloaded from https://data.world/data-society/used-cars-data"
+    "In order to see the analysis currently performed on the \"used cars\" dataset, first download the data from https://data.world/data-society/used-cars-data, and then run the notebook in `nbs/analysis.ipynb`. The result of this analysis can be seen in html here: https://jaumeamoresds.github.io/tabularml/analysis.html"
    ]
   },
   {
