Adding link as hyperlink

--- a/nbs/analysis.ipynb
+++ b/nbs/analysis.ipynb
@@ -56,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us first define some functions used throughout the notebook. We don't include the imports for the sake of space, but please look at the notebook nbs/analysis.ipynb for details."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -72,8 +79,22 @@
     "    z = hc.linkage(corr_condensed, method='average')\n",
     "    fig = plt.figure(figsize=figsize)\n",
     "    hc.dendrogram(z, labels=df.columns, orientation='left', leaf_font_size=font_size)\n",
-    "    plt.show()\n",
-    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us also define some variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "path = Path('data/datasets/autos.csv')\n",
     "results_path = Path('results/used_cars')\n",
     "results_path.mkdir (parents=True, exist_ok=True)\n",
@@ -83,23 +104,6 @@
     "                 numeric_variables_low=0.01,\n",
     "                 date_created=True)\n",
     "add_datepart_flag = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jaumeamllo/workspace/mine/tabularml\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd .."
    ]
   },
   {
@@ -144,13 +148,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -165,6 +162,20 @@
    ],
    "source": [
     "cd .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step is to load the data and have a quick look at it:"
    ]
   },
   {
@@ -475,6 +486,13 @@
    "metadata": {},
    "source": [
     "### Outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we remove outliers found in the data. For that purpose, we first examine the statistics of numerical variables:"
    ]
   },
   {
